# sassy

./: .gitignore  CHANGELOG.md  CUDA_ACTIVATION_STATUS.md  CUDA_BUILD_INSTRUCTIONS.md  CUDA_IMPLEMENTATION_README.md  CUDA_MIGRATION_PLAN.md  CUDA_PTX_COMPILATION_ISSUE.md  CUDA_QUICKSTART.md  CUDA_SUMMARY.md  Cargo.toml  LICENSE  README.md  README_CUDA.md  WGPU_MIGRATION_PLAN.md  build.rs  dist-workspace.toml  justfile  pyproject.toml  rust-toolchain.toml  test.py
.cargo/: config-portable.toml  config.toml
.github/workflows/: build_on_OS.yaml  check_stubs.yaml  publish_pypi.yaml  release.yaml  release.yml  setup-rustflags  test.yaml
benches/: ipc.rs  perf.rs  table_it.py
doc/: abstract.md
evals/: .gitignore  Cargo.toml  README.md  patterns.fa  plot_throughput.py  plot_throughput_text.py  plot_trace.py  run_tool_bench.py
evals/data/: match_frac_0_k_0.01.csv  match_frac_0_k_0.05.csv  match_frac_0_k_20.csv  match_frac_0_k_3.csv
evals/src/: main.rs
evals/src/benchsuite/: bench.rs  edlib.rs  mod.rs  sim_data.rs
evals/src/edlib_bench/: runner.rs  sim_data.rs
evals/src/sassy1/: mod.rs  throughput_m.rs  throughput_n.rs  trace.rs
evals/src/sassy1/agrep_comparison/: runner.rs
evals/src/sassy1/configs/: throughput_m.toml  throughput_n.toml  trace.toml
evals/src/sassy1/edlib_bench/: edlib.rs  grid.rs  mod.rs  runner.rs  sim_data.rs
evals/src/sassy1/output/: search_throughput_pat_len.csv  search_throughput_text_len.csv  trace_extra_time.csv
evals/src/sassy1/overhang/: runner.rs
evals/src/sassy1/profiles/: runner.rs
evals/src/sassy1/scripts/: plot_throughput_m.py  plot_throughput_n.py  plot_trace.py  show_stats.py
evals/src/sassy2/: README.md  bench.rs  mod.rs  nanopore.rs  off_targets.rs  output  pattern_scaling.rs  pattern_scaling_config.toml  pattern_throughput.rs  pattern_throughput_config.toml  scaling_benchmark.rs  scaling_config.toml  text_scaling.rs  text_scaling_config.toml
evals/src/sassy2/configs/: crispr_off_target_config.toml  nanopore_config.toml  pattern_scaling_config.toml  text_scaling_config.toml
evals/src/sassy2/data/static/: guides.fasta
evals/src/sassy2/output-epyc-256/: pattern_scaling_results.csv  text_scaling_results.csv
evals/src/sassy2/output-epyc-512/: pattern_scaling_results.csv  text_scaling_results.csv
evals/src/sassy2/output-intel-laptop/: pattern_scaling_results.csv
evals/src/sassy2/output-laptop/: text_scaling_results.csv
evals/src/sassy2/output-server-512/: pattern_scaling_results.csv
evals/src/sassy2/output-xeon-256/: nanopore_results.csv  off_target_results.csv  pattern_scaling_results.csv  text_scaling_results.csv
evals/src/sassy2/output-xeon-512/: nanopore_results.csv  off_target_results.csv  pattern_scaling_results.csv  text_scaling_results.csv
evals/src/sassy2/output-xeon-512-128t/: nanopore_results.csv  off_target_results.csv
evals/src/sassy2/output_paper/: pattern_scaling_results.csv  pattern_throughput_results.csv  scaling_benchmark_results.csv  text_scaling_results.csv
evals/src/sassy2/scripts/: generate_fig1.py  plot_scaling.py  plot_throughput.py
examples/: gpu.rs  modes.rs  search_all_alignments.rs
fig/: sassy-grep.cast
gpu_kernel/: Cargo.toml
gpu_kernel/src/: lib.rs
kernels/: Cargo.toml
kernels/src/: lib.rs
python/: README.md
python/sassy/: __init__.pyi  example.py  example_search_all_alignments.py  example_typed.py  sassy.pyi
src/: alignment_iterator.rs  bitpacking.rs  lib.rs  n_filter.rs  pretty_print.rs  profiles.rs  python.rs  search.rs  trace.rs
src/pattern_tiling/: backend.rs  backend_cuda.rs  backend_wgpu.rs  general.rs  minima.rs  mod.rs  search.rs  search_cuda.rs  search_wgpu.rs  tqueries.rs  trace.rs
src/pattern_tilling/: backend.rs  general.rs  search.rs  tqueries.rs  trace.rs
src/profiles/: ascii.rs  dna.rs  iupac.rs
