[package]
name = "sassy"
version = "0.1.10"
edition = "2024"
authors = ["Rick Beeloo", "Ragnar Groot Koerkamp"]
description = "Approximate string matching using SIMD"
repository = "https://github.com/RagnarGrootKoerkamp/sassy"
license = "MIT"
keywords = ["bioinformatics", "string", "fuzzy", "search", "simd"]
readme = "README.md"
categories = ["science"]
rust-version = "1.91"

[lib]
name = "sassy"
crate-type = ["cdylib", "rlib"]

[profile.release]
incremental = true
opt-level = 3
debug = true

[profile.dist]
inherits = 'release'
incremental = false
codegen-units = 1
lto = true
debug = false


[[bin]]
name = 'sassy'
path = 'bin/main.rs'


[dependencies]
rand = "0.9.0"
pa-types = "1.2.0"
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
num_cpus = "1.16.0"
needletail = "0.6.3"
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38", "generate-import-lib"], optional = true }
colored = "3.0.0"
either = "1.15.0"
wide = "1.1.1"
ensure_simd = "0.1.0"
rayon = "1.11.0"
itertools = "0.14.0"
derivative = "2.2.0"

[dev-dependencies]
tempfile = "3.20.0"
packed-seq = "4.3.0"
rand = "0.9.0"
criterion = { version = "0.5", features = ["html_reports"] }
perfcnt = "0.8.0"

[features]
avx512 = []
python = ["pyo3"]
c = []

# Build the library with scalar types, with reduced performance.
# Without this, it requires either AVX2 or NEON to be available at compile time.
scalar = ["ensure_simd/scalar"]

default = []


[workspace]
members = [
    ".",
    "evals"
]

[[bench]]
name = "perf"
harness = false

[[bench]]
name = "ipc"
harness = false

[profile.bench]
inherits = "release"