[package]
name = "sassy"
version = "0.2.1"
edition = "2024"
authors = ["Rick Beeloo", "Ragnar Groot Koerkamp"]
description = "Approximate string matching using SIMD"
repository = "https://github.com/RagnarGrootKoerkamp/sassy"
license = "MIT"
keywords = ["bioinformatics", "string", "fuzzy", "search", "simd"]
readme = "README.md"
categories = ["science"]
rust-version = "1.91"

[lib]
name = "sassy"
crate-type = ["cdylib", "rlib"]

[profile.release]
incremental = true
opt-level = 3
debug = true

[profile.dist]
inherits = 'release'
incremental = false
codegen-units = 1
lto = true
debug = false


[package.metadata.multivers.x86_64]
cpus = ["x86-64-v3", "x86-64-v4"]

[[bin]]
name = 'sassy'
path = 'bin/main.rs'
required-features = ["cli"]

[[bin]]
name = "gen_stubs"
path = "src/bin/gen_stubs.rs"
required-features = ["python-stubs"]

[[example]]
name = 'modes'
required-features = ["cli"]
[[example]]
name = 'all_vs_all_barcodes'
required-features = ["cli"]


[dependencies]
pa-types = "1.2.0"
log = "0.4.27"
either = "1.15.0"
wide = "1.1.1"
ensure_simd = "0.1.0"
rayon = "1.11.0"
itertools = "0.14.0"
derivative = "2.2.0"

# Optional: CLI binary dependencies
clap = { version = "4.5.37", features = ["derive"], optional = true }
needletail = { version = "0.6.3", optional = true }
env_logger = { version = "0.11.8", optional = true }
num_cpus = { version = "1.16.0", optional = true }
colored = { version = "3.0.0", optional = true }

# Optional: diagnostic functions (test_throughput, test_cpu_features)
rand = { version = "0.9.0", optional = true }

# Optional: Python bindings
pyo3 = { version = "0.28", features = [
  "extension-module",
  "abi3-py38",
  "generate-import-lib",
  "experimental-inspect",
], optional = true }

# Optional: Python stub generation via pyo3-introspection
pyo3-introspection = { version = "0.28", optional = true }

[dev-dependencies]
tempfile = "3.20.0"
packed-seq = "4.3.0"
rand = "0.9.0"
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dev-dependencies]
perfcnt = "0.8.0"

[features]
default = ["cli", "diagnostics"]

# CLI binary and pretty-printing support
cli = ["clap", "needletail", "env_logger", "num_cpus", "colored"]

# Diagnostic functions (test_throughput, test_cpu_features) that depend on rand
diagnostics = ["rand"]

# Enable AVX-512 variant of version 1.
# Not enabled by default, since it's not faster.
# V2 automatically uses AVX-512 based on compile-time feature detection of the target cpu.
avx512 = []

python = ["pyo3"]
python-stubs = ["pyo3-introspection"]
c = []

# Build the library with scalar types, with reduced performance.
# Without this, it requires either AVX2 or NEON to be available at compile time.
scalar = ["ensure_simd/scalar"]


[workspace]
members = [".", "evals"]

[[bench]]
name = "perf"
harness = false

[[bench]]
name = "ipc"
harness = false
