[package]
name = "evals"
version = "0.1.2"
edition = "2024"
publish = false

[dependencies]
edlib_rs.git = "https://github.com/pairwise-alignment/edlib-rs"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19.0"
tempfile = "*"
rand = "*"
sassy = { path = ".." }
clap = { version = "4.5.37", features = ["derive"] }
